# GeoTaichi

./: .gitignore  CHANGES.md  INSTALLATION.md  MIGRATION_GUIDE.md  README.md  VALIDATION_TEST_REPORT.md  geotaichi_env.yml  pyproject.toml  requirements.sh  requirements.txt  setup.py
example/dem/TriaxialTest/: conso.py
geotaichi/: __init__.py
geotaichi/contact_detection/bounding_volume_hierarchy/: AABB.py  BVH.py  CollisionDetect.py  LBVH.py  MultiPatchLBVH.py  SpatialDivision.py  Utils.py  warp_bvh.py
geotaichi/dem/: BaseKernel.py  ContactManager.py  DEMBase.py  GenerateManager.py  PostPlot.py  Recorder.py  SceneManager.py  Simulation.py  mainDEM.py
geotaichi/dem/contact/: ContactKernel.py  ContactModelBase.py  EnergyConservation.py  HertzMindlin.py  JiangRolling.py  Linear.py  LinearBond.py  LinearRolling.py
geotaichi/dem/engines/: ElementTest.py  EngineKernel.py  ExplicitEngine.py
geotaichi/dem/generator/: BodyGenerator.py  BrustNeighbor.py  ClumpTemplate.py  GeneralShapeTemplate.py  InsertionKernel.py  LinkedCellNeighbor.py  LoadFromFile.py  WallGenerator.py
geotaichi/dem/neighbor/: BoundingVolumeHierarchy.py  BrustSearch.py  HierarchicalLinkedCell.py  LinkedCell.py  NeighborBase.py  neighbor_kernel.py
geotaichi/dem/structs/: BaseStruct.py  Geometry.py
geotaichi/linear_solver/: CompressedSparseRow.py  CoordinateSparseMatrix.py  MatrixFreeBICG.py  MatrixFreeBICGSTAB.py  MatrixFreeCG.py  MatrixFreePBICGSTAB.py  MatrixFreePCG.py
geotaichi/mesh/: GaussPoint.py  GenerateMesh.py  HexMesh.py  QuadMesh.py  TetraMesh.py
geotaichi/mpdem/: ContactManager.py  DEMPMBase.py  Engine.py  GenerateManager.py  Recorder.py  Simulation.py  mainDEMPM.py
geotaichi/mpdem/contact/: ContactModelBase.py  EnergyConservation.py  HertzMindlin.py  Linear.py  LinearBond.py  MultiLinkedCell.py  ParticleFluid.py
geotaichi/mpdem/fluid_dynamics/: CFDpart.py  DragForceModel.py  Resolved.py  SemiResolved.py  (+2 more)
geotaichi/mpm/: BaseKernel.py  Contact.py  GenerateManager.py  MPMBase.py  MaterialManager.py  PostPlot.py  Recorder.py  SceneManager.py  Simulation.py  SpatialHashGrid.py  mainMPM.py
geotaichi/sdf/: BasicShape.py  BuildSurfaceNode.py  FastMarchingMethod.py  LevelSetGrid.py  MultiSDF.py  SDFs.py  SDFs2D.py  SDFs3D.py  mesh.py  text.py  utils23D.py  utils2D.py  utils3D.py
geotaichi/utils/: DomainBoundary.py  GeometryFunction.py  MatrixFunction.py  Orientation.py  PrefixSum.py  Quaternion.py  RegionFunction.py  ScalarFunction.py  ShapeFunctions.py  TimeTicker.py  VectorFunction.py  WarpReduce.py  constants.py
src/linear_solver/: MatrixFreeBICG.py  MatrixFreeBICGSTAB.py  MatrixFreeCG.py  MatrixFreePBICGSTAB.py
src/mesh/: TetraMesh.py
src/sdf/: BasicShape.py
src/utils/: Orientation.py  PrefixSum.py  Quaternion.py  ScalarFunction.py  VectorFunction.py
(+71 files in other folders)
