[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "geotaichi"
version = "0.4.1"
description = "A High Performance Multiscale and Multiphysics Simulator"
readme = "README.md"
requires-python = ">=3.8.20"
dependencies = [
    "gmsh>=4.15.0",
    "meshio>=5.3.5",
    "numpy==1.24.4",
    "open3d>=0.19.0",
    "psutil>=7.1.3",
    "pynvml>=11.5.3",
    "scikit-image>=0.21.0",
    "shapely>=2.0.7",
    "taichi>=1.6.0",
    "trimesh>=4.5.1",
]

[project.urls]
Homepage = "https://github.com/Yihao-Shi/GeoTaichi"
Repository = "https://github.com/Yihao-Shi/GeoTaichi"

[tool.setuptools.packages.find]
include = ["geotaichi*", "src*", "third_party*"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.dll", "*.dylib"]

[tool.pyright]
reportInvalidTypeForm = false
