[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "geotaichi"
version = "0.4.1"
description = "A High Performance Multiscale and Multiphysics Simulator"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "gmsh>=4.15.0",
    "meshio>=5.3.5",
    "numpy>=2.0.2",
    "open3d>=0.19.0",
    "psutil>=7.1.3",
    "pynvml>=13.0.1",
    "scikit-image>=0.24.0",
    "shapely>=2.0.7",
    "taichi>=1.7.4",
    "trimesh>=4.10.1",
]

[project.urls]
Homepage = "https://github.com/Yihao-Shi/GeoTaichi"
Repository = "https://github.com/Yihao-Shi/GeoTaichi"

[tool.setuptools.packages.find]
include = ["geotaichi*", "src*", "third_party*"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.dll", "*.dylib"]

[tool.pyright]
reportInvalidTypeForm = false
